Refactor tool connector release snapshots